# kinect-experiments

./: .gitignore  README.txt
openni/bomberperson/: .cproject  .project  CMakeLists.txt  TODO
openni/bomberperson/src/: Bomb.cpp  Bomb.hpp  BomberPersonApp.cpp  BomberPersonApp.hpp  Cell.cpp  Cell.hpp  Explosion.cpp  Explosion.hpp  Field.cpp  Field.hpp  FieldGenerator.cpp  FieldGenerator.hpp  GlRenderer.cpp  GlRenderer.hpp  InputDevice.hpp  KeyboardInput.cpp  Logic.cpp  Logic.hpp  Match.cpp  Match.hpp  Options.cpp  Options.hpp  Player.cpp  Player.hpp  Renderer.hpp  SceneObject.cpp  SceneObject.hpp  SdlRenderer.cpp  SdlRenderer.hpp  WindowFrame.cpp  WindowFrame.hpp  main.cpp
openni/bomberperson/src/game/: Animation.cpp  Animation.hpp  Arena.cpp  Arena.hpp  ArenaGenerator.cpp  ArenaGenerator.hpp  Background.cpp  Background.hpp  Bomb.cpp  Bomb.hpp  Cell.cpp  Cell.hpp  Explosion.cpp  Explosion.hpp  Extra.cpp  Extra.hpp  Field.cpp  Field.hpp  FieldGenerator.cpp  FieldGenerator.hpp  Logic.cpp  Logic.hpp  Match.cpp  Match.hpp  Player.cpp  Player.hpp  SceneObject.hpp  Wall.cpp  Wall.hpp
openni/bomberperson/src/input/: KeyboardInput.cpp  KeyboardInput.hpp
openni/bomberperson/src/nui/: Kinect.cpp  Kinect.hpp  KinectDummy.hpp  Nui.hpp  UserData.cpp  UserData.hpp  UserTracking.cpp  UserTracking.hpp  openni_all.h
openni/bomberperson/src/render/: GlNoRes.cpp  GlNoRes.hpp  Renderer.hpp  Sdl.cpp  Sdl.hpp  SdlNoRes.cpp  SdlNoRes.hpp  SdlRenderer.cpp  SdlRenderer.hpp  SimpleGlRenderer.cpp  SimpleGlRenderer.hpp  SimpleSdlRenderer.cpp  SimpleSdlRenderer.hpp
openni/bomberperson/src/resource/: DirectedSpriteResource.cpp  DirectedSpriteResource.hpp  PlayerResource.cpp  PlayerResource.hpp  ResourceCache.cpp  ResourceCache.hpp  SpriteResource.cpp  SpriteResource.hpp
openni/bomberperson/src/utils/: Utils.hpp
openni/common/: .cproject
(+224 files in other folders)
